[tool.poetry]
name = "amhelpers"
version = "0.1.0"
description = "A collection of handy utilities."
authors = ["Anton Matsson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
